Added static gray background; Updated class name

--- a/src/components/LandingPage/landingPage.module.scss
+++ b/src/components/LandingPage/landingPage.module.scss
@@ -56,9 +56,10 @@
   }
 }
 
-.signUp,
+.signUpButton,
 .connectWalletButton,
 .donateButton {
+  background-color: #efefef;
   cursor: pointer;
   margin-top: 16px;
   padding: 8px;
